clusters/firefly/apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.15
          ports:
            - containerPort: 8989 # sonarr web interface
          volumeMounts:
            - mountPath: /config
              name: sonarr
            - mountPath: /series
              name: series
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr
        - name: series
          persistentVolumeClaim:
            claimName: series
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
